--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ $(window).load(function(){
         $("#encrypt").click(function() {
             $("#log").empty();
             var repository = $("input#repository").val();
-            var travis_url = "https://api.travis-ci.org/repos/" + repository + "/key";
+            var travis_url = "https://api.travis-ci.com/repos/" + repository + "/key";
             log("Requesting Travis public key from " + travis_url);
             $.get(travis_url, function(data){
                 var public_key = data["key"];
