--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         margin-top: 30px;
             }
     #log {
-        background: grey;
+        background: grey;;
+        word-wrap: break-word;
             }
     #log p {
         margin-top: 20px;
